Edit Added some changes to the recipe site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">    
     <head>
         <link rel="stylesheet" href="style.css">
      <meta charset="UTF-8">
@@ -11,6 +11,6 @@
         <h1>
             Odin Recipes 
         </h1>
-        <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">click to see THE RECIPE</a>
+        <button><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">click to see THE RECIPE</a></button>
     </body>   
 </html>
