--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,6 @@
     <title>Lasagna</title>
 </head>
 <body>
-    <div>
     <h1 class="hello">
          The recipe for lasagna</h1>
         <p>
@@ -36,7 +35,7 @@
     <h2 class="hello">
         Steps
     </h2>
-    <ol>
+    <ol id="hey">
         <li>Gather all your ingredients<p><img src="1.jpg"></p></li>
         <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.<p><img src="2.jpg"></p></li>
         <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 1/2 hours, stirring occasionally.<p><img src="3.jpg"></p></li>
@@ -44,6 +43,5 @@
         </li>
         <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.<p><img src="5.jpg"></p></li>
     </ol>
-</div>
 </body>
 </html>
